<resources>

    <!-- ———————————————————— General ———————————————————— -->
    <string name="app_name">SHppPro</string>

    <!-- ———————————————————— Auth ———————————————————— -->
    <!-- Layout -->
    <string name="auth_layout_hello_text">Let\'s get acquainted</string>
    <string name="auth_layout_hello_subtext">Fill out the profile and go to the application!</string>
    <string name="auth_layout_email_hint"><b>E-mail</b></string>
    <string name="auth_layout_password_hint"><b>Password</b></string>
    <string name="auth_layout_terms_warning">By clicking Register you agree to our Terms\nand Conditions</string> <!-- \n -->
    <string name="auth_layout_terms_warning_landscape">By clicking Register you agree to our Terms and Conditions</string>
    <string name="auth_layout_google_button" translatable="false">GOOGLE</string>
    <string name="auth_layout_google_button_text2" translatable="false">I am GOOGLE, i promise!</string>
    <string name="auth_layout_text_between_google_and_register">or</string>
    <string name="auth_layout_register_button">REGISTER</string>
    <string name="auth_layout_remember_me_checkbox">Remember me</string>
    <string name="auth_layout_already_have_account_message">Already have an account?</string>
    <string name="auth_layout_sign_in_button">Sign in</string>
    <string name="auth_layout_debug_button_fill">FILL</string>
    <string name="auth_layout_debug_button_clear">CLEAR</string>
    <string name="auth_layout_debug_button_language">LANG</string>
    <!-- Activity -->
    <string name="auth_activity_sign_in_button_login_screen">Sign up</string>
    <string name="auth_activity_hello_text_login_screen">Hello!</string>
    <string name="auth_activity_hello_subtext_login_screen">Enter your email and password below</string>
    <string name="auth_activity_register_button_login_screen">LOGIN</string>
    <string name="auth_activity_already_have_account_message_login_screen">Don’t have account?</string>
    <string name="auth_activity_forgot_your_password">Forgot your password?</string>
    <string name="auth_activity_password_warning_min_chars">Minimum %1$d Characters Password</string>               <!-- Variable -->
    <string name="auth_activity_password_warning_max_chars">Maximum %1$d Characters Password</string>               <!-- Variable -->
    <string name="auth_activity_password_warning_one_upper_char">Must Contain 1 Upper-case Character</string>
    <string name="auth_activity_password_warning_one_lower_char">Must Contain 1 Lower-case Character</string>
    <string name="auth_activity_password_warning_one_special_char">Must Contain 1 Special Character (%1$s)</string> <!-- Variable -->
    <string name="auth_activity_warning_message_invalid_register_form">Invalid registration form!</string>
    <string name="auth_activity_warning_message_invalid_email">Invalid email address</string>
    <string name="auth_activity_warning_message_ok_button_text">Okay</string>
    <string name="auth_activity_warning_message_email_title">Email</string>
    <string name="auth_activity_warning_message_password_title">Password</string>

    <!-- ———————————————————— Main ———————————————————— -->
    <!-- Tabs -->
    <string name="main_my_profile_tab">MY PROFILE</string>
    <string name="main_my_contacts_tab">MY CONTACTS</string>
    <!-- Layout -->
    <string name="main_settings">Settings</string>
    <string name="main_logout_button">LOGOUT</string>
    <string name="main_person_name_sample">Person Name</string>
    <string name="main_person_career_sample">Career</string>
    <string name="main_person_address_sample">Home address</string>
    <string name="main_edit_profile_button">Edit profile</string>
    <string name="main_view_my_contacts_button">VIEW MY CONTACTS</string>
    <!-- Activity -->
    <string name="main_activity_person_name_hardcoded" translatable="false">Viktor Hardcode</string>
    <string name="main_activity_person_email_hardcoded" translatable="false">Viktor.Hardcode@gmail.com</string>
    <string name="main_activity_person_career_hardcoded" translatable="false">Motion designer</string>
    <string name="main_activity_person_address_hardcoded" translatable="false">49101, Dnipro, Homeadress str. 7</string>

    <!-- ———————————————————— Contacts ———————————————————— -->
    <string name="contacts_recycler_person_name_sample">Person Name</string>
    <string name="contacts_recycler_person_career_sample">Career</string>
    <string name="contacts_contacts_title">My Contacts</string>
    <string name="contacts_add_contact">Add contact</string>
    <string name="revoke_permits">revoke\npermits</string>
    <string name="contacts_change_to_phonebook">Change to Phonebook</string>
    <string name="contacts_grant_permission_button">Grant permission</string>
    <string name="contacts_change_to_fake_data">Change to fake data</string>
    <string name="my_contacts_remove_contact">Contact has been removed</string>
    <string name="my_contacts_remove_contact_undo">Undo</string>

    <!-- ———————————————————— Contacts_Permissions ———————————————————— -->
    <string name="my_contacts_permission_denied">Permission denied!</string>
    <string name="my_contacts_permission_denied_message">Please, go to settings and set contacts permission to allow.</string>
    <string name="my_contacts_permission_positive_btn">OK</string>
    <string name="my_contacts_permission_negative_btn">Cancel</string>

    <!-- ———————————————————— Add new contact ———————————————————— -->
    <string name="contacts_add_contact_title">Add contact</string>
    <string name="contacts_add_contact_username">Username</string>
    <string name="contacts_add_contact_career">Career</string>
    <string name="contacts_add_contact_email">Email</string>
    <string name="contacts_add_contact_phone">Phone</string>
    <string name="contacts_add_contact_address">Address</string>
    <string name="contacts_add_contact_birthday">Date of birth</string>
    <string name="contacts_add_contact_save_button">SAVE</string>
    <string name="my_contacts_add_contact_please_write_name">Please, write name!</string>

    <!-- ———————————————————— Contact details ———————————————————— -->
    <string name="contactDetails_profileTitle">Profile</string>
    <string name="contactDetails_messageButton">MESSAGE</string>

    <!-- ———————————————————— Safe Arg ———————————————————— -->
    <string name="safe_arg_id" translatable="false">argument</string>
    <string name="main_profile_email_not_exist">User info is empty</string>

</resources>