<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".presentation.screens.auth.AuthActivity">

    <!-- Guide of center of elements. -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_login_leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_login_rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- E-Mail, Password, Remember and Forgot. -->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_login_emailAndPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="
        flow_login_helloText,
        textInputLayout_login_email,
        textInputLayout_login_password,
        flow_login_rememberAndForgot"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toStartOf="@+id/guideLine_login_leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"
        app:layout_constraintBottom_toTopOf="@id/button_login_registerByGoogle"
        />

    <!-- Hello text. -->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_login_helloText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offset_L"
        android:orientation="vertical"
        app:constraint_referenced_ids="
        textView_login_helloText,
        textView_login_helloSubtext"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_helloText"
        style="@style/basicText_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_layout_hello_text"
        android:textSize="@dimen/size_textFont_L"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_helloSubtext"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_layout_hello_subtext"
        android:textSize="@dimen/size_textFont_XXS"
        android:paddingBottom="24dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_login_email"
        style="@style/textInputLayout_LoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_layout_email_hint"
        android:textColorHint="?attr/colorOnTertiary"
        android:textCursorDrawable="@null"
        app:colorControlActivated="?attr/colorOnTertiary"
        app:colorControlHighlight="?attr/colorOnTertiary"
        app:colorControlNormal="?attr/colorOnTertiary"
        app:helperTextTextColor="?attr/colorError"

        app:hintTextAppearance="@style/textInputLayout_hintSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow_login_emailAndPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_login_emailField"
            style="@style/textInputLayout_basicTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_login_password"
        style="@style/textInputLayout_LoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_layout_password_hint"
        android:paddingTop="@dimen/offset_S"
        android:textColorHint="?attr/colorOnTertiary"
        android:textCursorDrawable="@null"
        app:colorControlActivated="?attr/colorOnTertiary"
        app:colorControlHighlight="?attr/colorOnTertiary"
        app:colorControlNormal="?attr/colorOnTertiary"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/count_loginFragment_passwordMaxLength"
        app:counterTextColor="?attr/colorTertiary"
        app:helperTextTextColor="?attr/colorError"
        app:hintTextAppearance="@style/textInputLayout_hintSize"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?attr/colorTertiary"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_login_passwordField"
            style="@style/textInputLayout_basicTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Remember and Forgot inner flow. -->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_login_rememberAndForgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="
        checkbox_login_rememberMe,
        textView_login_forgotPasswordText"
        app:flow_horizontalStyle="spread_inside"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_login_rememberMe"
        style="@style/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/auth_layout_remember_me_checkbox"
        android:textColor="?attr/colorOnTertiary"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_forgotPasswordText"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_activity_forgot_your_password"
        android:visibility="invisible"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <!-- Google or Register and Terms warning. -->

    <com.vikmanz.shpppro.presentation.utils.customViews.CustomGoogleButton
        android:id="@+id/button_login_registerByGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_buttonHeight_M"
        app:layout_constraintEnd_toEndOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toStartOf="@id/guideLine_login_leftBorder"
        app:layout_constraintBottom_toTopOf="@+id/textView_login_textBetweenGoogleAndRegister"
        android:layout_marginBottom="4dp"
        app:mgbText="GOOGLE"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintButtonSize"
 />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_textBetweenGoogleAndRegister"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_layout_text_between_google_and_register"
        android:textSize="@dimen/size_textFont_M"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toStartOf="@id/guideLine_login_leftBorder"
        app:layout_constraintBottom_toTopOf="@+id/button_login_registerByEmail"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_registerByEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_buttonHeight_XL"
        android:background="@drawable/button_selector_orange_outlined"
        android:text="@string/auth_layout_register_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toStartOf="@id/guideLine_login_leftBorder"
        app:layout_constraintBottom_toTopOf="@id/textView_login_warningAboutTerms"
        android:textAppearance="@style/basicText_buttonsText"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_warningAboutTerms"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_S"
        android:text="@string/auth_layout_terms_warning"
        android:textAlignment="center"
        android:textSize="@dimen/size_textFont_XXS"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_login_alreadyHaveAccountMessage"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toStartOf="@+id/guideLine_login_leftBorder" />

    <!-- Sign in or Sign up. -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_alreadyHaveAccountMessage"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_layout_already_have_account_message"
        android:textColor="?attr/colorOnTertiary"
        android:layout_marginBottom="12dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideLine_login_leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/textView_login_switchScreenToLoginButton"
        app:layout_constraintBottom_toTopOf="@+id/button_login_fillLoginAndPass"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login_switchScreenToLoginButton"
        style="@style/basicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_layout_sign_in_button"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textView_login_alreadyHaveAccountMessage"
        app:layout_constraintTop_toTopOf="@+id/textView_login_alreadyHaveAccountMessage"
        app:layout_constraintBottom_toBottomOf="@+id/textView_login_alreadyHaveAccountMessage"
        tools:ignore="MissingConstraints" />

    <!-- Helper buttons. It will be removed from release version. -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_fillLoginAndPass"
        android:layout_width="@dimen/width_loginFragment_helpButtonsWidth"
        android:layout_height="@dimen/size_buttonHeight_M"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_selector_orange_outlined"
        android:text="@string/auth_layout_debug_button_fill"
        android:textAppearance="@style/basicText_buttonsText"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_login_clearLoginPassFields"
        app:layout_constraintStart_toStartOf="@+id/guideLine_login_leftBorder"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_clearLoginPassFields"
        android:layout_width="@dimen/width_loginFragment_helpButtonsWidth"
        android:layout_height="@dimen/size_buttonHeight_M"
        android:background="@drawable/button_selector_orange_outlined"
        android:text="@string/auth_layout_debug_button_clear"
        android:textAppearance="@style/basicText_buttonsText"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/button_login_fillLoginAndPass"
        app:layout_constraintEnd_toStartOf="@id/button_login_changeLanguage"
        app:layout_constraintStart_toEndOf="@id/button_login_fillLoginAndPass"
        app:layout_constraintTop_toTopOf="@id/button_login_fillLoginAndPass"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:visibility="visible" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_changeLanguage"
        android:layout_width="@dimen/width_loginFragment_helpButtonsWidth"
        android:layout_height="@dimen/size_buttonHeight_M"
        android:background="@drawable/button_selector_orange_outlined"
        android:text="@string/auth_layout_debug_button_language"
        android:textAppearance="@style/basicText_buttonsText"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/button_login_fillLoginAndPass"
        app:layout_constraintEnd_toEndOf="@+id/guideLine_login_rightBorder"
        app:layout_constraintStart_toEndOf="@id/button_login_clearLoginPassFields"
        app:layout_constraintTop_toTopOf="@id/button_login_fillLoginAndPass"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>